cleanup в районе аутинтификации пользователей